# internal/transport/http/handlers/swagger_types.go
@@ -1,5 +1,7 @@
 package handlers
 
+import "tramplin/internal/models"
+
 type SuccessResponse struct {
 	Status string `json:"status" example:"ok"`
 	Data   any    `json:"data"`
@@ -8,4 +10,14 @@ type SuccessResponse struct {
 type ErrorResponse struct {
 	Status string `json:"status" example:"error"`
 	Error  string `json:"error" example:"bad request"`
+}
+
+type ChatConversationResponse struct {
+	Status string                  `json:"status" example:"ok"`
+	Data   models.ChatConversation `json:"data"`
+}
+
+type ChatConversationListResponse struct {
+	Status string                    `json:"status" example:"ok"`
+	Data   []models.ChatConversation `json:"data"`
 }
